--- a/Covid19IncidenceRasInhibitors/extras/Table1TopTriple_revision.tex
+++ b/Covid19IncidenceRasInhibitors/extras/Table1TopTriple_revision.tex
@@ -3,13 +3,14 @@
 \rowcolors{2}{gray!6}{white}
 \begin{longtable}{lrrrrrrrrrrrrrrrrrr}
 \caption{
-Baseline patient characteristics for ACEi/ARB (T) and CCB/THZ (C) monotherapy prevalent-use in the SIDIAP, VA-OMOP and CUIMC data sources. We report the proportion of use satisfying selected based-line characteristics and the standardized difference of population proportions (SDf) before and after stratification. Less extreme SDf through stratification suggest improved balance between patient cohorts through propensity score adjustment.
+Baseline patient characteristics for ACEI/ARB (T) and CCB/THZ (C) monotherapy prevalent-use in the SIDIAP, VA-OMOP and CUIMC data sources. We report the proportion of use satisfying selected based-line characteristics and the standardized difference of population proportions (SDf) before and after stratification. Less extreme SDf through stratification suggest improved balance between patient cohorts through propensity score adjustment.
 }\label{tab:demographics}
 \\
 \hiderowcolors
 \toprule
 & \multicolumn{6}{c}{SIDIAP} & \multicolumn{6}{c}{VA-OMOP}  & \multicolumn{6}{c}{CUIMC} \\
 \cmidrule(lr){2-7} \cmidrule(lr){8-13} \cmidrule(lr){14-19}
+% Another row
 \multicolumn{1}{c}{Characteristic}
 & \multicolumn{3}{c}{Before stratification} & \multicolumn{3}{c}{After stratification}
 & \multicolumn{3}{c}{Before stratification} & \multicolumn{3}{c}{After stratification}
@@ -41,6 +42,7 @@ Baseline patient characteristics for ACEi/ARB (T) and CCB/THZ (C) monotherapy pr
 \endfirsthead
 (Continued) & \multicolumn{6}{c}{SIDIAP} & \multicolumn{6}{c}{VA-OMOP}  & \multicolumn{6}{c}{CUIMC} \\
 \cmidrule(lr){2-7} \cmidrule(lr){8-13} \cmidrule(lr){14-19}
+% Another row
 \multicolumn{1}{c}{Characteristic}
 & \multicolumn{3}{c}{Before stratification} & \multicolumn{3}{c}{After stratification}
 & \multicolumn{3}{c}{Before stratification} & \multicolumn{3}{c}{After stratification}
