--- a/Covid19IncidenceRasInhibitors/extras/Supplement.Rmd
+++ b/Covid19IncidenceRasInhibitors/extras/Supplement.Rmd
@@ -3,8 +3,6 @@ params:
     save: NULL #"first.Rda"
     load: "first.Rda"
     completeReload: false
-# bibliography: CohortDefinition.bib
-# csl: nature-publishing-group-vancouver.csl
 output:
   pdf_document:
     keep_tex: true
@@ -43,7 +41,7 @@ header-includes:
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
 options(kableExtra.latex.load_packages = FALSE)
 library(kableExtra)
-knitr::knit_hooks$set(document = function(x) {sub('\\usepackage[]{color}', '\\usepackage[table]{xcolor}', x, fixed = TRUE)})
+knitr::knit_hooks$set(document = function(x) {sub('\\usepackage[]{xcolor}', '\\usepackage[table]{xcolor}', x, fixed = TRUE)})
 library(dplyr)
 library(tidyr)
 library(xtable)
@@ -1506,14 +1504,44 @@ makeEffectTable("PAAS", "matched", "Meta-analysis",
                 texTop = "SupTabEffectMaTop.tex")
 ```
 
-<!-- # Cohort specifications -->
+# Negative control outcomes
 
-<!-- ## Antihypertensives -->
+We selected negative controls using a process similar to that outlined in Voss et al. \citep{voss2017accuracy}.
+We first constructed a list of all conditions that satisfy the following criteria with respect to all drug exposures in the LEGEND-HTN study \citep{suchard2019comprehensive}:
 
-<!-- ## COVID-19 diagnosis -->
+* No Medline abstract where the MeSH terms suggests a drug-condition association \citep{winnenburg2015leveraging},
+* No mention of the drug-condition pair on a US product label in the "Adverse Drug Reactions" or "Postmarketing" section \citep{duke2013consistency},
+* No US spontaneous reports suggesting that the pair is in an adverse event relationship \citep{evans2001use,banda2016curated},
+* OMOP vocabulary does not suggest that the drug is indicated for the condition,
+* Vocabulary conditional concepts are usable (i.e., not too broad, not suggestive of an adverse event relationship, no pregnancy related), and
+* Exact condition concept itself is used in patient level data.
 
-<!-- ## COVID-19 hospitalization -->
+We then optimized the remaining condition concepts, such that parent concepts remove children as defined by the OMOP vocabulary and performed manual review to exclude any pairs that may still be in a causal relationship or too similar to the study outcome.
+This process led to a candidate list of 123 negative controls:
 
-<!-- ## Pneumonia -->
+<!-- for which a table can be found in Study Protocol (https://github.com/OHDSI/Legend/tree/master/Documents). -->
 
-<!-- ## PAAS -->
+
+```{r, echo=FALSE}
+negatives <- read.csv(
+  system.file("settings", "NegativeControls.csv", package = "Covid19IncidenceRasInhibitors")
+  #"../inst/settings/NegativeControls.csv"
+  ) %>% filter(targetId == 137,
+               comparatorId == 138) %>%
+  select(outcomeName)
+names(negatives) <- "Condition concept"
+
+knitr::kable(negatives, 
+             #format = "latex", 
+             escape = FALSE, longtable = TRUE, booktabs = TRUE,
+             caption = "\\textbf{Negative control outcomes.}"
+             ) %>%
+  kableExtra::kable_styling(#latex_options = "striped",
+                            stripe_index = c(1,3,5))
+
+```
+
+\clearpage
+
+\bibliographystyle{vancouver}
+\bibliography{Supplement-bib.bib}
